new proj/src/objects/GE_ES_Deal_Management__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_GS_RStatus__c</fullName>
        <label>R Status</label>
        <picklist>
            <picklistValues>
                <fullName>R0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1 Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3 Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 Interim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0 Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iR3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Risk_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Management2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Routine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Tier_3__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_ES_PGS_Sub_P_L__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 3 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Oppty_Record_Type__c</fullName>
        <formula>GE_ES_Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Record Type-Data Migration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Oppty_Tier_2__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_HQ_Business_Tier2__c )</formula>
        <label>Oppty Tier 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_App_Dt__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_App_Sts__c</fullName>
        <description>This Field is for  ,to know Approval Process Status</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Ops Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Email to CC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_App_by__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Approval_Level__c</fullName>
        <label>PII Approval Level</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Approval (Level One)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Operational Approval (Level Two)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Operational Approval (High Risk, Level Three)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Approval_Role__c</fullName>
        <label>PII Approval Role</label>
        <picklist>
            <picklistValues>
                <fullName>CommOps Owner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Operational Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Operational Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Opportunity_id__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_PII_Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PII Opportunity id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Pipe_Amount__c</fullName>
        <description>Pipeline amount is updated via trigger from Oppty</description>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Pipeline_Amount__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_PII_Forecast_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_PrPlTy__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_ES_Proposal_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_ProdScp__c</fullName>
        <label>Products in Scope</label>
        <picklist>
            <picklistValues>
                <fullName>ILI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_RiskCmt__c</fullName>
        <description>Scope of Work/ Risk Comments</description>
        <label>Scope of Work/ Risk Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_Risk_Level__c</fullName>
        <description>This field has been created to store the risk level that is being populated based on pipeline amount and deviations for an oppty.</description>
        <label>Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_SalsReg__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_PII_Ops_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_R1_Stage_Counter__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_ES_R1_Stage_Counter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R1 Stage Counter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Reason_Rej__c</fullName>
        <label>Reason for Rejection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Send_CC_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send CC Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_BSM_Date__c</fullName>
        <label>BSM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Bid_Price__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_Bid_Price__c</formula>
        <label>Bid Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CM_as_Bid__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_CM_as_Bid__c</formula>
        <label>CM as Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Close_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.CloseDate</formula>
        <label>Expected Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Commercial_Primary_Resource__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_Commercial_Primary_Resource__r.FirstName  &amp; &quot; &quot; &amp;  GE_ES_Opportunity__r.GE_ES_Commercial_Primary_Resource__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Primary Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_DSR_Date__c</fullName>
        <label>DSR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Extension_Agreed_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_TM_Extension_Agreed_Date__c</formula>
        <label>Extension Agreed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_GE_O_G_Legal_entity__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_OG_TM_GE_O_G_Legal_entity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GE O&amp;G Legal entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Heavy_R1_Date__c</fullName>
        <label>Heavy R1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Opportunity_Stage__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Oppty_CM__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_ES_OPPTY_CM__c</formula>
        <label>TM Oppty CM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Public_Bid__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_OG_TM_Public_Bid__c)</formula>
        <label>Public Bid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_R1_Date__c</fullName>
        <label>R1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_R2_Date__c</fullName>
        <label>R2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_R3QDt__c</fullName>
        <label>R3 Queue For LOI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_R3Q_LOI__c</fullName>
        <label>R3 Queue for LOI</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_R3_Date__c</fullName>
        <label>R3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_RdySntDt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_TM_Ready_to_be_sent_date__c</formula>
        <label>Ready to be sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Risk_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Valid Risk Manager.</errorMessage>
            <filterItems>
                <field>User.GE_OG_As_RiskManger__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_TPropDDt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_TM_Technical_Proposal_Due_Date__c</formula>
        <label>Technical Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_TPropExtADt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_TM_Tech_Prop_Extension_Agreed_Date__c</formula>
        <label>Tech Prop Extension Agreed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_TPropSntDt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_OG_TM_Technical_Proposal_Sent_Date__c</formula>
        <label>Technical Proposal Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Technical_sent_Date_to_comops__c</fullName>
        <label>Technical sent Date to comops</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_O_G_DP_Legal_Entity__c</fullName>
        <label>GE O&amp;G Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>GE Commerce (China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Energy OilField Technology Canada Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Energy Oil Field Technology Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEII Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEII Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEII Tanzania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEII Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEIOC Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geolink UK Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Rus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GETSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril India JV LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril PCB Canada Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril PCB Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril PCB Private Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril Pressure Control Business Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril Pressure Control Private Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril Pressure Control S. DE R.L. de C.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril USA Distribution LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydril USA Manufacturing LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC Hydril Technical Services of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure Control Systems Nigeria Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pt Vetco Gray Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sondex Middle East FZCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sondex Wireline Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetco Gray Argentina SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetco Gray AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Oil &amp; Gas Australia Pty Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetco Gray Canada Inc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PGS_Policy_rev__c</fullName>
        <label>Policy 5.0 Review Needed</label>
        <picklist>
            <picklistValues>
                <fullName>TDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Unit Spares (NUS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal (New Units)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PGS_Region_Ctr__c</fullName>
        <label>Region Controller Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PGS_Rev_Rec_Sta__c</fullName>
        <label>Rev Rec State</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Bridger_KYC_check_complete__c</fullName>
        <label>Bridger/KYC check passed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Budget_Proposal_Due_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_Budget_Proposal_Due_Date__c</formula>
        <label>Budget Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_Financial_Screen_eRAM_Complete__c</fullName>
        <label>Financial Screen (eRAM) Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Crl_Ldr__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+GE_ES_Opportunity__r.GE_PW_NUC_Crl_Ldr__c, GE_ES_Opportunity__r.GE_PW_NUC_Crl_Ldr__r.FirstName+&apos; &apos;+GE_ES_Opportunity__r.GE_PW_NUC_Crl_Ldr__r.LastName , &apos;_top&apos;)</formula>
        <label>Commercial Leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Ery_ADt__c</fullName>
        <label>Energy Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Fnc_ADt__c</fullName>
        <label>Finance Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_GEH_Dt__c</fullName>
        <label>GEH CEO Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_Nuc_Sts__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_PW_NUC_Nuc_Sts__c )</formula>
        <label>Nuclear ComOps Status To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_PW_ApDt__c</fullName>
        <label>P&amp;W Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_NUC_RBid_Dt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_NUC_RBid_Dt__c</formula>
        <label>Revised Bid Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_R1_Approval_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_R1_Approval_Date__c</formula>
        <label>R1 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_R2_Approval_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_R2_Approval_Date__c</formula>
        <label>R2 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_R3_Approval_Date__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_R3_Approval_Date__c</formula>
        <label>R3 Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_CmDt_GT__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_TML_CmDt_GT__c</formula>
        <label>1st Unit Ship Date (GT)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Cm_Dt_G__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_TML_Cm_Dt_G__c</formula>
        <label>1st Unit Ship Date (Gen)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Cm_Dt_S__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_TML_Cm_Dt_S__c</formula>
        <label>1st Unit Ship Date (ST)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Frcst__c</fullName>
        <formula>IF( GE_ES_Opportunity__r.GE_PW_TML_Frcst__c == true , &apos;Yes&apos; ,&apos;No&apos;)</formula>
        <label>Include in Forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Grw_PB__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_PW_TML_Grw_PB__c)</formula>
        <label>Growth Playbook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Icd_Rup__c</fullName>
        <formula>IF( GE_ES_Opportunity__r.GE_PW_TML_Icd_Rup__c == true , &apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Included for Rollup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_J_SR_Dt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_TML_J_SR_Dt__c</formula>
        <label>Joint Strategy Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Mail_Dt__c</fullName>
        <label>Bid Mailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Op_Plan__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_PW_TML_Op_Plan__c)</formula>
        <label>Op Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Opp_Typ__c</fullName>
        <formula>TEXT(GE_ES_Opportunity__r.GE_PW_TML_Opp_Typ__c)</formula>
        <label>Oppty Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_R1_Stus__c</fullName>
        <formula>TEXT( GE_ES_Opportunity__r.GE_PW_TML_R1_Stus__c )</formula>
        <label>R1 Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_R2_P_Dt__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_PW_TML_R2_P_Dt__c</formula>
        <label>R2 Projected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_TML_Sts_Cmt__c</fullName>
        <label>Status Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy 5.0 Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_R2_Submitted__c</fullName>
        <label>R2 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Regnal_App_Date__c</fullName>
        <label>Regional Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Risk_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Prescreening Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_TCs_Per_Ext_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;C&apos;s Per Existing Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_Tier1_IRegion__c</fullName>
        <formula>GE_ES_Opportunity__r.GE_Tier1_IRegion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 Install Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Tier3_Hub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to pull approvers in Risk Process for all businesses.</description>
        <label>Risk Region</label>
        <referenceTo>GE_HQ_Region__c</referenceTo>
        <relationshipLabel>Deal Management (Tier3 Hub)</relationshipLabel>
        <relationshipName>Deal_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Tier3_Hub_old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to pull approvers in Risk Process for all businesses.</description>
        <label>Tier3 Hub Old</label>
        <referenceTo>GE_ES_Sales_Region__c</referenceTo>
        <relationshipLabel>Deal Management (Tier3 Hub)</relationshipLabel>
        <relationshipName>Deal_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_tm_proposal_date__c</fullName>
        <label>GE_tm_proposal_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_PL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Type</label>
        <referenceTo>GE_ES_PL__c</referenceTo>
        <relationshipLabel>Deal Management</relationshipLabel>
        <relationshipName>Deal_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OG_DP_Cost_to_Bid__c</fullName>
        <label>Cost to Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oppty_ID__c</fullName>
        <formula>IF(  $RecordType.DeveloperName  ==&apos;OG_TM_Deal_Management&apos;, GE_ES_Opportunity__r.GE_OG_TM_Oppty_ID__c,  GE_ES_Opportunity__r.GE_OGGS_Oppty_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Legacy_id__c</fullName>
        <formula>GE_ES_Opportunity__r.Legacy_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Legacy id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Tier_1__c</fullName>
        <description>Need to delete this . Created this for Risk Data Simplification</description>
        <formula>TEXT( GE_ES_Opportunity__r.GE_HQ_Business_Tier1__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Tier 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Date_Stamp__c</fullName>
        <label>Proposal Date Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_ID_18_Char__c</fullName>
        <description>This is the full 18 character id</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the full 18 character id</inlineHelpText>
        <label>Record ID (18 Char)</label>
        <type>Text</type>
    </fields>
    <label>Deal Management</label>
    <nameField>
        <label>DM Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Management</pluralLabel>
    <recordTypes>
        <fullName>ES_Deal_Management</fullName>
        <active>true</active>
        <label>ES Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_Lufkin_Deal_Management</fullName>
        <active>true</active>
        <label>GE OG Lufkin Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCS_Deal_Management</fullName>
        <active>true</active>
        <label>MCS Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>OG_D_S_Deal_Management</fullName>
        <active>true</active>
        <label>OG D&amp;P Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>OG_GS_Deal_Management</fullName>
        <active>true</active>
        <description>Deal Management Record Type for OG Global Services</description>
        <label>OG GS Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>OG_PII_Deal_Management</fullName>
        <active>true</active>
        <label>OG PII Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>OG_SS_Deal_Management</fullName>
        <active>true</active>
        <label>OG SS Deal Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>OG_TM_Deal_Management</fullName>
        <active>true</active>
        <label>OG TM Deal Management</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMF_Approved_Account_Check_CDCL_FastTra</fullName>
        <active>true</active>
        <description>This evaluates the Account Request Status = CMF Approved to Fast Track or CD CL</description>
        <errorConditionFormula>AND(  
 ISPICKVAL(GE_ES_Opportunity__r.GE_HQ_Business_Tier2__c, &apos;Measurement &amp; Control (M&amp;C)&apos;), 
     NOT(TEXT(GE_ES_Opportunity__r.Account.GE_HQ_Request_Status__c) = &quot;CMF Approved&quot;),
     OR( GE_ES_Opportunity__r.GE_ES_L0L1_Risk_Process_Only__c = True,
         GE_App_Conf_by_CD_CL__c =True )
   )</errorConditionFormula>
        <errorMessage>An Opportunity associated to an Account that is not CMF Approved cannot be Fast Tracked or CD/CL Approved until the Account is CMF Approved. Please Submit the Account to CMF or Check the Status of CMF Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMF_Approved_Acount_Check_for_PGcheckbox</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( GE_ES_PrpslGen__c =true,    
       ISPICKVAL(GE_ES_Opportunity__r.GE_HQ_Business_Tier2__c, &apos;Measurement &amp; Control (M&amp;C)&apos;),     
       
      NOT(TEXT(GE_ES_Opportunity__r.Account.GE_HQ_Request_Status__c) = &quot;CMF Approved&quot;))</errorConditionFormula>
        <errorMessage>An Opportunity must have a CMF Approved Account before submitting Proposal to customer. Please Submit the Account for CMF review or add a CMF Approved Account to this Oppty.</errorMessage>
    </validationRules>
</CustomObject>